# E-Learning-Platform

./: .gitignore  pyproject.toml
courses/: admin.py  fields.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
courses/management/commands/: seed_fake_data.py
courses/migrations/: 0001_initial.py  0002_content_file_image_text_video.py  0003_alter_content_options_alter_module_options_and_more.py  0004_course_students.py
courses/templates/registration/: logged_out.html
courses/templatetags/: course.py
courses/views/: __init__.py  content.py  course.py  mixins.py  module.py  order.py
educa/: settings.py  urls.py
static/css/: base.css
students/: forms.py  urls.py  views.py
templates/: base.html
templates/courses/manage/content/: file.html  form.html  image.html  text.html  video.html
templates/courses/manage/course/: delete.html  detail.html  form.html  list.html
templates/courses/manage/module/: content_list.html  formset.html
templates/registration/: logged_out.html  login.html
templates/students/course/: detail.html  list.html
templates/students/student/: registration.html
