[project]
name = "e-learning-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-braces>=1.17.0",
    "django-daisy>=2.0.5",
    "django-embed-video>=1.4.10",
    "django-model-utils>=5.0.0",
    "django-orbit[mcp]>=0.8.0",
    "django-redisboard>=9.0.0",
    "pillow>=12.0.0",
    "pymemcache==4.0.0",
]
